<resources>
    <string name="app_name">AlcoApp</string>
    <string name="fawourite_tab_name">Favouite</string>
    <string name="new_tab_name">New</string>
    <string name="best_tab_name">Best</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="RPassword">Repeat Password</string>
    <string name="Register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
