<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/neew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/selectedTab"
            android:text="@string/new_tab_name"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/best"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/notSelectedTab"
            android:text="@string/best_tab_name"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/notSelectedTab"
            android:text="@string/fawourite_tab_name"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>