<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    tools:context=".Activities.LoginActivity">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="30dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/LLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/LPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Password" />
    </android.support.design.widget.TextInputLayout>
<Button
    android:id="@+id/LButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Login"
    android:layout_marginBottom="50dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="30dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/RLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/RPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/RRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/RPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/RButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        />
    </LinearLayout>
</ScrollView>